fix bottom on mobile version

--- a/assets/less/main.less
+++ b/assets/less/main.less
@@ -48,6 +48,9 @@ html {
 		background-blend-mode: multiply;
     	background-color: #ccc;
 		padding-bottom: .5rem;
+		@media screen and (max-width: 640px) {
+			margin-bottom: 3rem;
+		}
 	}
 
 }
